apps/speedcoder/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedcoder
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  selector:
    app: speedcoder
  ports:
    - name: http
      port: 80
      targetPort: http
