apps/speedcoder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedcoder
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: traefik
  tls:
    - hosts: [speedcoder.seol.pro]
  rules:
    - host: speedcoder.seol.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedcoder
                port:
                  name: http
